<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg_color"
    android:weightSum="12"
    >

    <include layout="@layout/top_bar_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight = "1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="11">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_10"
            android:weightSum="6"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                style="@style/TitleLittleText14"
                android:text="@string/old_password"
                android:layout_marginLeft="@dimen/margin_20"
                />


            <EditText
                android:id="@+id/modify_old_password_edit"
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="50dp"
                android:background="@color/transparent"
                android:hint="@string/please_input_old_password"
                style="@style/MarkText12"
                android:layout_marginLeft="@dimen/margin_15"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:weightSum="6"

            >

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                style="@style/TitleLittleText14"
                android:text="@string/new_password"
                android:layout_marginLeft="@dimen/margin_20"
                />


            <EditText
                android:id="@+id/modify_new_password_edit"
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="50dp"
                android:background="@color/transparent"
                android:hint="@string/please_input_new_password"
                style="@style/MarkText12"
                android:layout_marginLeft="@dimen/margin_15"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:weightSum="6"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                style="@style/TitleLittleText14"
                android:text="@string/confirm_new_password"
                android:layout_marginLeft="@dimen/margin_20"
                />


            <EditText
                android:id="@+id/modify_confirm_new_password_edit"
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="50dp"
                android:background="@color/transparent"
                android:hint="@string/please_input_new_password"
                style="@style/MarkText12"
                android:layout_marginLeft="@dimen/margin_15"
                />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
