<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="12">

    <include layout="@layout/top_bar_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight = "1" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="11"
        android:weightSum="11"
        android:layout_marginTop="@dimen/margin_20"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="@dimen/text_size_16"
            android:text="@string/version_app_name"
            android:gravity="center"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center"
            >


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version_hint"
                />


            <TextView
                android:id="@+id/version_info_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_10"
                android:text="@string/version_hint"
                />
        </LinearLayout>



        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.2"
            android:background="@drawable/login_btn_bg_orange_shape"
            android:layout_margin="@dimen/margin_20"
            android:text="@string/version_check"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_18"
            />


    </LinearLayout>






</LinearLayout>
