<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="12">

    <include layout="@layout/top_bar_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight = "1" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@drawable/gray_line_shape"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="0dp"
        android:layout_weight="11">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_20"
            android:text="@string/relay_name"
            android:textSize="@dimen/text_size_14" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/room_name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_5"
            android:layout_marginLeft="@dimen/margin_20"
            android:layout_marginRight="@dimen/margin_20"
            android:focusableInTouchMode="true"
            android:hint="@string/device_name"
            android:textSize="@dimen/text_size_12"
            android:theme="@style/EditTextLineColor" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15"
            android:text="@string/linked_devices"
            android:layout_marginLeft="@dimen/margin_20"
            android:textSize="@dimen/text_size_14" />

        <GridView
            android:id="@+id/room_linked_devices_gv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            android:overScrollMode="never"
            android:numColumns="3"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginLeft="@dimen/margin_5"
            android:layout_marginRight="@dimen/margin_5"
            >
        </GridView>

    </LinearLayout>

</LinearLayout>